Fixed bugs and added Task dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+admin.name=Sebastian
+admin.mail=sebaszymek@gmail.com
